<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group android:id="@+id/group_control_parental">

        <item
            android:id="@+id/nav_eliminar"
            android:icon="@drawable/eliminar"
            android:textAllCaps="true"
            android:title="@string/eliminar_elemento" />

        <item
            android:id="@+id/nav_papelera"
            android:title="Papelera"
            android:icon="@drawable/ic_bin" />

    </group>

    <item
        android:id="@+id/Perfiles"
        android:textAllCaps="true"
        android:title="Perfiles">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_modo_paciente"
                    android:title="Paciente"
                    android:icon="@drawable/ic_person" />


                <item
                    android:id="@+id/nav_administrar_perfiles"
                    android:title="Administrar perfiles"
                    android:icon="@drawable/ic_lock" />


            </group>
        </menu>
    </item>

    <item
        android:id="@+id/compartir"
        android:textAllCaps="true"
        android:title="@string/Compartir">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/exportar_archivos"
                    android:title="@string/exportar_archivos"
                    android:textAllCaps="true"
                    android:icon="@android:drawable/ic_menu_share"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/importar_archivos"
                    android:title="@string/importar_archivos"
                    android:textAllCaps="true"
                    android:icon="@android:drawable/ic_menu_upload"
                    app:showAsAction="ifRoom" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/group_cuenta"
        android:title="Cuenta">
        <menu>
            <item
                android:id="@+id/nav_cuenta_info"
                android:title="Sin iniciar sesión"
                android:icon="@drawable/ic_login"
                android:enabled="false" />

            <item
                android:id="@+id/nav_cuenta_email"
                android:title=""
                android:enabled="false"
                android:visible="false" />

            <item
                android:id="@+id/nav_sincronizar"
                android:title="Sincronizar ahora"
                android:icon="@drawable/ic_sync"
                android:visible="false" />
            <item
                android:id="@+id/nav_download"
                android:title="Descargar cambios"
                android:icon="@drawable/ic_download"
                android:visible="false" />

            <item
                android:id="@+id/nav_cuenta_accion"
                android:title="Iniciar sesión / Crear cuenta"
                android:icon="@drawable/ic_logout" />
        </menu>
    </item>

</menu>


